--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
       <meta charset="utf-8">
       <title>Raymond Martinez' Resume</title>
       <meta name="viewport" content="width=device-width">
-
       <link rel="stylesheet" href="css/resume.css">
       <link href="https://fonts.googleapis.com/css?family=Catamaran|Lato:400i" rel="stylesheet">
 
@@ -12,8 +11,8 @@
     
     <body>
       <header id="home" class="clearfix scroll_container">
-        <nav>
-          <ul>
+        <nav class="clearfix">
+          <ul class="clearfix">
             <a href="#about"><li>About</li></a>
             <a href="#projects"><li>Projects</li></a>
             <a href="#contact"><li>Contact</li></a>
@@ -21,16 +20,14 @@
         </nav>
         <div id="header_content_container">
           <div class="intro">
-            <span>Hello, my name is Raymond Martinez</span>
+            <span>Hello, my name is Raymond Martinez.</span>
+            <span>I am a Front End Developer living in San Diego.</span>
           </div>
-          <div class="what_i_do">
-            & I can develop your front end.
-          </div> 
         </div>
       </header>
       <div id="about" class="one">
-        <div class="one_heading">Why I'm the right fit for you.</div>
-        <div class="work clearfix">
+        <!-- <div class="one_heading">Why I'm the right fit for you.</div> -->
+        <!-- <div class="work clearfix">
           <div class="work1">
             <div class="work_img"><img src="img/lightbulb.png"></div>
             <p>I can help you create what the client loves<br> or discover new trends in marketing.</p>
@@ -41,10 +38,7 @@
             <p>HTML / CSS / JavaScript<br>...& a litte bit of PhotoShop</p>
             <p class="hide">HTML, CSS, JavaScript, ...& a little bit of PhotoShop.</p>
           </div>
-          <div class="work3">
-            
-          </div>
-        </div>
+        </div> -->
         <div id="to_top">
             <p><a href="#home">Back to Top</a></p>
           </div>
@@ -55,30 +49,30 @@
         <div id="showContainer">
 
           <div class="imageContainer" id="im_1">
-            <img class="slide_img" src="img/Golf.png">
+            <img class="slide_img" src="img/san_diego_golf.png">
             <div class="caption">
-              Main Page
+              <a href="https://rcmartinez54.github.io/San_Diego_Golf/" target="_blank">Golfing In San Diego</a>
             </div>
           </div>
 
           <div class="imageContainer" id="im_2">
-            <img class="slide_img" src="img/Golf2.png">
+            <img class="slide_img" src="img/glass_art.png">
             <div class="caption">
-              Course beginning
+              <a href="https://rcmartinez54.github.io/Art/">My Glass Art</a>
             </div>
           </div>
 
           <div class="imageContainer" id="im_3">
-            <img class="slide_img" src="img/Golf3.png">
+            <img class="slide_img" src="img/MMTC.png">
             <div class="caption">
-              Sign-up and/or book a tee time
+              <a href="https://rcmartinez54.github.io/Muscle_Mechanics_TC/" target="_blank">Muscle Mechanics Training Center</a>
             </div>
           </div>
 
           <div class="imageContainer" id="im_4">
-            <img class="slide_img" src="img/Weather_API.png">
+            <img class="slide_img" src="img/ed_harris.png">
             <div class="caption">
-              San Diego Weather API
+              <a href="">Ed Harris Golf</a>
             </div>
           </div>
 
