--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
       </div>
       <div id="contact" class="three">
 
-        <!-- <h2 class="form_heading">Please feel free to contact me.</h2>
+        <h2 class="form_heading">Please feel free to contact me.</h2>
 
         <form method="post" name="contact_form" action="contact-form-handler.php">
           <input type="text" name="name" placeholder="Name:">
           <input type="text" name="email" placeholder="Email Address:">
           <textarea name="message" placeholder="Message:"></textarea>
           <input class="submit_button" type="submit" value="Submit">
-        </form> -->
-
+        </form>
+      </div>  
       
 
-      <a name="form1762460560" id="formAnchor1762460560"></a>
+      <!-- <a name="form1762460560" id="formAnchor1762460560"></a>
       <script type="text/javascript" src="https://fs27.formsite.com/include/form/embedManager.js?1762460560"></script>
       <script type="text/javascript">
       EmbedManager.embed({
@@ -109,9 +109,9 @@
        width: "100%",
       mobileResponsive: true
         });
-      </script>
+      </script> -->
 
-      </div>
+
     
       <div id="to_top">
         <p><a href="#home">Back to Top</a></p>
