--- a/index.html
+++ b/index.html
@@ -31,15 +31,37 @@
       <div id="about" class="one">
         <h2>About Me and What I Can Do</h2>
         <h3>My Background</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pulvinar tincidunt metus. Duis nec dolor in sapien ultrices dapibus. Mauris ut fermentum diam. Sed at vestibulum odio. In hac habitasse platea dictumst. Suspendisse vestibulum pulvinar maximus. Duis elementum elit eget tellus molestie, non interdum urna vestibulum. Vestibulum vel nibh at neque blandit bibendum. Sed interdum justo convallis, placerat tellus id, volutpat augue.</p>
+        <p>
 
-        <div class="imageContain clearfix">
+        My name is Raymond Martinez and I have recently relocated to the San Diego area to become a Web Developer.  Prior to my move I was working as an Athletic Trainer for the San Francisco 49ers and lived in San Jose, California.
+
+        </p>
+
+        <p>
+
+        My first dip into the HTML and CSS pool was while I was creating a "How To" instructional site while working on my Masters Degree in Human Resource Development while at Clemson University in 2013.  I was working as a Graduate Assistant for their football team.  
+
+        </p>
+
+        <p>
+          
+        Fast forward five years and I decided to make a career change to chase my passion for creativity.  In the new year I have taken the time to learn how to code, utilizing Treehouse, FreeCodeAcademy, and the MDN (Mozilla Developer Network) to build my own websites.  
+
+        </p>
+
+        <div class="imageContain">
           <img src="img/young.png">
           <img src="img/grownUp.png">
         </div>
+
+        <p id="on_left">I'm the one on the left</p>
         
         <h3>What I do</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pulvinar tincidunt metus. Duis nec dolor in sapien ultrices dapibus. Mauris ut fermentum diam. Sed at vestibulum odio. In hac habitasse platea dictumst. Suspendisse vestibulum pulvinar maximus. Duis elementum elit eget tellus molestie, non interdum urna vestibulum. Vestibulum vel nibh at neque blandit bibendum. Sed interdum justo convallis, placerat tellus id, volutpat augue.</p>
+        <p>
+
+        I use the latest versions of HTML, CSS, JavaScript and WordPress to create user friendly websites.  With my background in Human Resources and Project Management I can also help streamline the design process to ultimately come to a conclusion that the customer will love.  
+
+        </p>
 
         <div id="to_top">
             <p><a href="#home">Back to Top</a></p>
@@ -98,7 +120,7 @@
 
         <h2 class="form_heading">Please Feel Free to Contact Me.</h2>
 
-        <form method="post" name="contact_form" action="contact-form-handler.php">
+        <form method="post" name="contact_form" action="https://formspree.io/rcmartinez1854@gmail.com">
           <input type="text" name="name" placeholder="Name:">
           <input type="text" name="email" placeholder="Email Address:">
           <textarea name="message" placeholder="Message:"></textarea>
