--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
   <html>
+
     <head>
       <meta charset="utf-8">
       <title>Raymond Martinez' Resume</title>
@@ -104,7 +105,7 @@
           <div class="imageContainer" id="im_5">
             <img class="slide_img" src="img/Weather_API2.png">
             <div class="caption">
-              Current Weather
+              <a href="#">Current Weather</a>
             </div>
           </div>
 
