--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="imageContainer" id="im_3">
             <a href="https://rcmartinez54.github.io/Muscle_Mechanics_TC/"><img class="slide_img" src="img/MMTC.png"></a>
             <div class="caption">
-              <a href="https://rcmartinez54.github.io/Muscle_Mechanics_TC/" target="_blank">Muscle Mechanics Training Center</a>
+              <a href="https://rcmartinez54.github.io/Muscle_Mechanics_TC/" target="_blank">Muscle Mechanics TC</a>
             </div>
           </div>
 
