--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
 
           <div class="imageContainer" id="im_3">
-            <a href="https://rcmartinez54.github.io/Muscle_Mechanics_TC/"><img class="slide_img" src="img/MMTC.png"></a>
+            <a href="https://rcmartinez54.github.io/Muscle_Mechanics_TC/" target="_blank"><img class="slide_img" src="img/MMTC.png"></a>
             <div class="caption">
               <a href="https://rcmartinez54.github.io/Muscle_Mechanics_TC/" target="_blank">Muscle Mechanics TC</a>
             </div>
