--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
             </div>
           </div>
 
-          <div class="imageContainer" id="im_5">
+          <!-- <div class="imageContainer" id="im_5">
             <img class="slide_img" src="img/Weather_API2.png">
             <div class="caption">
               <a href="#">Current Weather</a>
             </div>
-          </div>
+          </div> -->
 
           <div class="navButton" id="previous">&#10094;</div>
           <div class="navButton" id="next">&#10095;</div>
