--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
 
         <h2 class="form_heading">Please Feel Free to Contact Me.</h2>
 
+        <h3>
+          
+        email: rcmartinez1854@gmail.com / cell-phone: (209) 402-8780
+
+        </h3>
+
         <form method="post" name="contact_form" action="https://formspree.io/rcmartinez1854@gmail.com">
           <input type="text" name="name" placeholder="Name:">
           <input type="text" name="email" placeholder="Email Address:">
