added descriptions to sites on slideshow

--- a/index.html
+++ b/index.html
@@ -79,12 +79,22 @@
             <div class="caption">
               <a href="https://rcmartinez54.github.io/San_Diego_Golf/" target="_blank">Golfing In San Diego</a>
             </div>
+            <div>
+              <p>
+                This is a project I started to create a place where local golf enthusiasts can come and get my take on courses I've played.
+              </p>
+            </div>
           </div>
 
           <div class="imageContainer" id="im_2">
             <a href="https://rcmartinez54.github.io/Art/" target="_blank"><img class="slide_img" src="img/glass_art.png"></a>
             <div class="caption">
               <a href="https://rcmartinez54.github.io/Art/">My Glass Art</a>
+            </div>
+            <div>
+              <p>
+                I created this to showcase my glass art.
+              </p>
             </div>
           </div>
 
@@ -93,12 +103,22 @@
             <div class="caption">
               <a href="https://rcmartinez54.github.io/Muscle_Mechanics_TC/" target="_blank">Muscle Mechanics TC</a>
             </div>
+            <div>
+              <p>
+                A friend of mine is a Strength Coach and only markets himself with flyers at local shops.  I built this for him.
+              </p>
+            </div>
           </div>
 
           <div class="imageContainer" id="im_4">
             <a href="https://rcmartinez54.github.io/Ed_Harris_Golf/" target="_blank"><img class="slide_img" src="img/ed_harris.png"></a>
             <div class="caption">
               <a href="https://rcmartinez54.github.io/Ed_Harris_Golf/" target="_blank">Ed Harris Golf</a>
+            </div>
+            <div>
+              <p>
+                I took one golf lesson from Ed and one thing I noticed was how much his site could use a makeover.  This is as close to what he currently has but with a little CSS love.
+              </p>
             </div>
           </div>
 
