added new site to slideshow

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h3>What I do</h3>
         <p>
 
-        I use the latest versions of HTML, CSS, JavaScript and WordPress to create user friendly websites.  With my background in Human Resources and Project Management I can also help streamline the design process to ultimately come to a conclusion that the customer will love.  
+        I use the latest versions of HTML, CSS, and JavaScript to create user friendly websites.  With my background in Human Resources and Project Management I can also help streamline the design process and increase Search Engine Optimization.  
 
         </p>
 
@@ -122,12 +122,17 @@
             </div>
           </div>
 
-          <!-- <div class="imageContainer" id="im_5">
-            <img class="slide_img" src="img/Weather_API2.png">
+          <div class="imageContainer" id="im_5">
+            <a href="https://rcmartinez54.github.io/movies/" target="_blank"><img class="slide_img" src="img/100movies.png"></a>
             <div class="caption">
-              <a href="#">Current Weather</a>
+              <a href="#">100 Movies You Should Watch</a>
             </div>
-          </div> -->
+            <div>
+              <p>
+                I built this site to share my love of movies.
+              </p>
+            </div>
+          </div>
 
           <div class="navButton" id="previous">&#10094;</div>
           <div class="navButton" id="next">&#10095;</div>
