revamped current projects section" "

--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
 
         <p>
 
+        I have experience dating back to my time in the Navy where I was a Data Analyst / System Administrator in an F/A-18 squadron maintaining their NALCOMIS (Naval Aviation Logistics Command Management Information System).<br></br>
+
         My first dip into the HTML and CSS pool was while I was creating a "How To" instructional site while working on my Masters Degree in Human Resource Development while at Clemson University in 2013.  I was working as a Graduate Assistant for their football team.  
 
         </p>
 
         <p>
           
-        Fast forward five years and I decided to make a career change to chase my passion for creativity.  In the new year I have taken the time to learn how to code, utilizing Treehouse, FreeCodeAcademy, and the MDN (Mozilla Developer Network) to build my own websites.  
+        Fast forward five years and I decided to make a career change to chase my passion for creativity.  In the new year I have taken the time to learn how to code, utilizing Treehouse, FreeCodeAcademy, Codecademy and the MDN (Mozilla Developer Network) to build my own websites.  
 
         </p>
 
@@ -72,7 +74,66 @@
       <div id="projects" class="two">
         <p class="two_p">What I've Currently Been Working On</p>
 
-        <div id="showContainer">
+        <div class="proj clearfix">
+          <div class="proj-pic">
+            <a href="https://rcmartinez54.github.io/movies/" target="_blank"><img class="slide_img" src="img/100movies.png"></a>
+          </div>
+          <div class="proj-text">
+            <p>
+              I built this site to share my love of movies.
+            </p>
+            <p>
+              I utilized JSON objects to populate the text and images to keep the HTML markup as minimal as possible.
+            </p>
+          </div>
+        </div>
+        <!-- <div class="proj-btm-border clearfix"><div class="line">I want a line here</div></div> -->
+
+        <div class="proj clearfix">
+          <div class="proj-pic">
+            <a href="https://rcmartinez54.github.io/San_Diego_Golf/" target="_blank"><img class="slide_img" src="img/san_diego_golf.png"></a>
+          </div>
+          <div class="proj-text">
+            <p>
+              I moved to San Diego over a year ago and was finally free to play as much golf as I could.  I decided to share each course I've played via this website.  It is a work in progress since I keep playing new courses.
+            </p>
+          </div>
+        </div>
+
+        <div class="proj clearfix">
+          <div class="proj-pic">
+            <a href="https://rcmartinez54.github.io/Art/" target="_blank"><img class="slide_img" src="img/glass_art.png"></a>
+          </div>
+          <div class="proj-text">
+            <p>
+              This was the first site I put together to really practice with JQuery.  It is a gallery for all the art I've done with glass and paint markers as the medium.  Work in progress as I continue to learn.
+            </p>
+          </div>
+        </div>
+
+        <div class="proj clearfix">
+          <div class="proj-pic">
+            <a href="https://rcmartinez54.github.io/Muscle_Mechanics_TC/" target="_blank"><img class="slide_img" src="img/MMTC.png"></a>
+          </div>
+          <div class="proj-text">
+            <p>
+              My friend is a personal trainer and is only marketing himself via flyers at coffee shops.  I built this for him if he ever feels the need to utilize the web.  Him and I are currently brainstorming for new ideas.  I may be revamping the look soon.
+            </p>
+          </div>
+        </div>
+
+        <div class="proj clearfix">
+          <div class="proj-pic">
+            <a href="https://rcmartinez54.github.io/Ed_Harris_Golf/" target="_blank"><img class="slide_img" src="img/ed_harris.png"></a>
+          </div>
+          <div class="proj-text">
+            <p>
+              I took a single lesson with Ed about six months ago and the way I found him was through a web search.  I noticed his current website needed some love so I took it upon myself to dress up the CSS.  His clients are usually the elder population so I kept it simple.
+            </p>
+          </div>
+        </div>
+
+        <!-- <div id="showContainer">
 
           <div class="imageContainer" id="im_1">
             <a href="https://rcmartinez54.github.io/movies/" target="_blank"><img class="slide_img" src="img/100movies.png"></a>
@@ -139,7 +200,7 @@
           <div class="navButton" id="previous">&#10094;</div>
           <div class="navButton" id="next">&#10095;</div>
 
-        </div>
+        </div> -->
 
       </div>
 
