updated mobile view on current projects sections

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
             <p>
               I utilized JSON objects to populate the text and images to keep the HTML markup as minimal as possible.
             </p>
+            <p>
+              &#9756 Click Image to View Live Site
+            </p>
           </div>
         </div>
         <!-- <div class="proj-btm-border clearfix"><div class="line">I want a line here</div></div> -->
@@ -97,6 +100,9 @@
             <p>
               I moved to San Diego over a year ago and was finally free to play as much golf as I could.  I decided to share each course I've played via this website.  It is a work in progress since I keep playing new courses.
             </p>
+            <p>
+              &#9756 Click Image to View Live Site
+            </p>
           </div>
         </div>
 
@@ -107,6 +113,9 @@
           <div class="proj-text">
             <p>
               This was the first site I put together to really practice with JQuery.  It is a gallery for all the art I've done with glass and paint markers as the medium.  Work in progress as I continue to learn.
+            </p>
+            <p>
+              &#9756 Click Image to View Live Site
             </p>
           </div>
         </div>
@@ -119,6 +128,9 @@
             <p>
               My friend is a personal trainer and is only marketing himself via flyers at coffee shops.  I built this for him if he ever feels the need to utilize the web.  Him and I are currently brainstorming for new ideas.  I may be revamping the look soon.
             </p>
+            <p>
+              &#9756 Click Image to View Live Site
+            </p>
           </div>
         </div>
 
@@ -129,6 +141,9 @@
           <div class="proj-text">
             <p>
               I took a single lesson with Ed about six months ago and the way I found him was through a web search.  I noticed his current website needed some love so I took it upon myself to dress up the CSS.  His clients are usually the elder population so I kept it simple.
+            </p>
+            <p>
+              &#9756 Click Image to View Live Site
             </p>
           </div>
         </div>
@@ -210,7 +225,7 @@
 
         <h3>
           
-        email: rcmartinez1854@gmail.com / cell-phone: (209) 402-8780
+        &#9993 rcmartinez1854@gmail.com / &#9743 (209) 402-8780
 
         </h3>
 
