deleted verbiage from h3 what I do

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h3>What I do</h3>
         <p>
 
-        I use the latest versions of HTML, CSS, and JavaScript to create user friendly websites.  With my background in Human Resources and Project Management I can also help streamline the design process.
+        I use the latest versions of HTML, CSS, and JavaScript to create user friendly websites.  
 
         </p>
 
