added new website to portfolio

--- a/index.html
+++ b/index.html
@@ -76,6 +76,23 @@
 
         <div class="proj clearfix">
           <div class="proj-pic">
+            <a href="https://rcmartinez54.github.io/podcast/" target="_blank"><img class="slide_img" src="img/podcast.png"></a>
+          </div>
+          <div class="proj-text">
+            <p>
+              I'm currently building this website for a podcast that is coming down the pipe.
+            </p>
+            <p>
+              This site is the first one I built utilizing Flexbox.
+            </p>
+            <p>
+              &#9756 Click Image to View Live Site
+            </p>
+          </div>
+        </div>
+
+        <div class="proj clearfix">
+          <div class="proj-pic">
             <a href="https://rcmartinez54.github.io/movies/" target="_blank"><img class="slide_img" src="img/100movies.png"></a>
           </div>
           <div class="proj-text">
