added to html in proj-text

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
           <div class="proj-text">
             <p>
-              I'm currently building this website for a podcast that is coming down the pipe.
+              I'm currently building this website for a podcast that is coming down the pipe. *work in progress*
             </p>
             <p>
               This site is the first one I built utilizing Flexbox.
