added new div for thinful project

--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
 
         <div class="proj clearfix">
           <div class="proj-pic">
+            <a href="https://rcmartinez54.github.io/portfolio/" target="_blank"><img class="slide_img" src="img/thinkful-portfolio.png"></a>
+          </div>
+          <div class="proj-text">
+            <p>
+              This is the portfolio I have built as one of the assignments in Thinkful's Full-Stack bootcamp.
+            </p>
+            <p>
+              The projects I have built while in the program are linked in the portfolio site.
+            </p>
+            <p>
+              &#9756 Click Image to View Live Site
+            </p>
+          </div>
+        </div>
+        
+        <div class="proj clearfix">
+          <div class="proj-pic">
             <a href="https://rcmartinez54.github.io/podcast/" target="_blank"><img class="slide_img" src="img/podcast.png"></a>
           </div>
           <div class="proj-text">
