deleted some verbiage on #about

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <p>
           
-        Leaving my Sports Medicine career was not an easy decision but I ultimately decided to make a career change to chase my passion for creativity.  I have taken the time to learn how to code, utilizing Treehouse, FreeCodeAcademy, Codecademy and the MDN (Mozilla Developer Network) to build my own websites.    
+        Leaving my Sports Medicine career was not an easy decision but I ultimately decided to make a career change to chase my passion for creativity.  I have taken the time to learn how to code, utilizing Treehouse, FreeCodeAcademy, Codecademy and the Mozilla Developer Network to build my own websites.    
 
         </p>
 
